stop menu bar and home button overlapping + improve writing style + make text box navy

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 .navbar {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 28px;
   right: 0;
   background-color: #2c2c2c;
   display: flex;
@@ -111,7 +111,7 @@
 }
 
 .text-box {
-  background-color: #4b0082;
+  background-color: #000080;
   color: white;
   padding: 2rem;
   border-radius: 8px;
